test/fails/fewer_args.imp
fun one(x)
{
    return x;
}

fun main()
vars tmp
{
    tmp = one();
    return tmp;
}
